@@ -1,10 +1,11 @@
 WeeChat - Wee Enhanced Environment for Chat
 ===========================================
 
-ChangeLog - 2005-06-19
+ChangeLog - 2005-06-20
 
 
 Version 0.1.3 (under dev!):
+   * kill command now received and displayed
    * SSL support (currently in development, NOT WORKING!)
    * channel notify levels are saved in config file (new option
      "server_notify_levels" for server sections)
